--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="Button"
         />
+
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 </android.support.constraint.ConstraintLayout>
